--- a/ollama/Dockerfile
+++ b/ollama/Dockerfile
@@ -1,5 +1,8 @@
 FROM ollama/ollama
 
-COPY ./ollama/pull-model.sh /pull-model.sh
+COPY ./ollama/pull-model.sh /app/pull-model.sh
+RUN chmod +x /app/pull-model.sh
+
+ENTRYPOINT ["/app/pull-model.sh"]
 
 
