--- a/ollama/Dockerfile
+++ b/ollama/Dockerfile
@@ -1,8 +1,7 @@
 FROM ollama/ollama
 
-COPY ./ollama/pull-model.sh /app/pull-model.sh
+COPY /ollama/pull-model.sh /app/
 RUN chmod +x /app/pull-model.sh
 
-ENTRYPOINT ["/app/pull-model.sh"]
-
+CMD ["/app/pull-model.sh"]
 
