--- a/ollama/Dockerfile
+++ b/ollama/Dockerfile
@@ -3,5 +3,4 @@ FROM ollama/ollama
 COPY /ollama/pull-model.sh /app/
 RUN chmod +x /app/pull-model.sh
 
-CMD ["/app/pull-model.sh"]
-
+ENTRYPOINT ["sh", /app/pull-model.sh"]
